--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -94,6 +94,15 @@
     }
 }
 
+@media (min-width: 992px) {
+    .banner-title {
+        font-size: 2.4rem;
+    }
+
+    .description {
+        width: 100%;
+    }
+}
 
 @media (min-width: 1200px) {
     .example::before {
